UI Improvements - Added Icons and tweaked colors
Changed icons on trip page
changed an icon on welcome page
added icons to the footer (should be moved to bottom of page)
small color tweaks on trips page 
Tried very hard to improve header responsiveness, but was unable to accomplish this at the moment.

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -3,12 +3,15 @@
       <div class="row">
         <div class="col l6 m6 s12">
           <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">GruntMeister 5000 is a team of five 3rd and 4th year students that are trying to build a nice travel planner.</p>
+          <p class="grey-text text-lighten-4">GruntMeister 5000 is a team of five 3rd and 4th year computer science students who are trying to build a good travel planner.</p>
+
+
 
 
         </div>
         <div class="col l3 m3 s12">
-          <h5 class="white-text">Team</h5>
+          <h5 class="white-text">Team <i class=" material-icons">people</i></h5>
+          
           <ul>
             <li><a class="white-text" >Maryse Arseneau</a></li>
             <li><a class="white-text" >Jennifer Firsoff</a></li>
@@ -18,7 +21,8 @@
           </ul>
         </div>
         <div class="col l3 m3 s12">
-          <h5 class="white-text">email</h5>
+          <h5 class="white-text">Email <i class="material-icons">email</i></h5>
+          
           <ul>
             <li><a class="white-text" href="mailto:mgarseneau@mta.ca">mgarseneau@mta.ca</a></li>
             <li><a class="white-text" href="mailto:jsfirsoff@mta.ca">jsfirsoff@mta.ca</a></li>
