--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -3,7 +3,10 @@
 <header>
 
   <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">Bourgeois Travels</a>
+    <div class="nav-wrapper container">
+    <!-- <a id="logo-container" href="/"><i class="medium material-icons left">home</i></a>-->
+    <a id="logo-container" href="/" class="brand-logo">Bourgeois Travels</a>
+     
       <ul class="right hide-on-med-and-down">
       
         <li><a class='dropdown-trigger' href='#' data-target='trip-dropdown' data-beloworigin="true">Trips<i class="material-icons right">arrow_drop_down</i></a></li>
@@ -22,7 +25,6 @@
           <li><a href="/logout">Logout</a></li>
         </ul>
       </ul>
- 
 <!--
       <ul id="nav-mobile" class="sidenav">
       <li><span sec:authentication="firstName"></span></li>
