Added tooltip to header (home) Added tooltips to trip (also helps people see which button they are clicking on) Added tooltips to welcome Improved daysuntil calculation. Day 1 is now the first day of the trip. And it shows days until otherwise.

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -5,7 +5,7 @@
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container">
     <!-- <a id="logo-container" href="/"><i class="medium material-icons left">home</i></a>-->
-    <a id="logo-container" href="/" class="brand-logo">Bourgeois Travels</a>
+    <a id="logo-container " href="/" class="brand-logo tooltipped" data-position="left" data-tooltip="Home">Bourgeois Travels</a>
      
       <ul class="right hide-on-med-and-down">
       
