Closed unclosed div

--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -188,7 +188,7 @@
             <br><br>
         </div>
     </div>
-    
+    </div>
     <a th:href="@{/trip/} + ${trip.id} + '/print'" id="stickylink"><i class="material-icons tooltipped" data-position="left" data-tooltip="Print">print</i></a>
 
 <div th:replace="footer :: footer">...</div>
