--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -164,7 +164,16 @@
                             <div class="collapsible-header">
                                 <i class="material-icons">event_note</i>
                                 <span th:text="${#dates.format(itinerary.date, 'MMM dd, yyyy')}"></span>
-                                <span class="badge" th:text="day_num">4</span>
+                                <span class="badge">
+                                <span class="itinday">
+                                <script th:inline="javascript">
+                  					/*<![CDATA[*/
+                  					var begin = /*[[${trip.start}]]*/ 'default';
+                  					var itin = /*[[${itinerary.date}]]*/ 'default';
+                 				 	/*]]>*/      
+                 				</script>
+                				<script type="text/javascript" th:src="@{/jsp/itineraryday.js}"></script>
+                                </span></span>
                                 <span class="iconsright"><a th:href="@{/trip/} + ${trip.id} + @{/itinerary/delete/} + ${itinerary.id}" class="secondary-content tooltipped" data-position="bottom" data-tooltip="Delete Itinerary"
                                 method="delete"><i class="small material-icons">delete</i></a>
                                 <span class="editicon">
