Minor UI Improvements
Improved wording on trip starting next day
Changed Icon for notes
Added header to print page (printing option of header to be removed).

--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -195,7 +195,7 @@
                     <ul class="collapsible">
                     <li>
                             <div class="collapsible-header">
-                                <i class="material-icons">event_note</i>
+                                <i class="material-icons">description</i>
                                 <span th:text="${trip.title}"></span>                    
                             </div>
             
