hide header on print page when printing

--- a/src/main/resources/templates/import.html
+++ b/src/main/resources/templates/import.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="/css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    <link href="/css/print.css" type="text/css" rel="stylesheet" media="print" />
     
     <script src='https://maps.google.com/maps/api/js?key=AIzaSyAIhZ4DWSti3Va_4Zy5nxGnyEhaw4AF6ZI'></script>
     
