--- a/src/main/resources/templates/trip.html
+++ b/src/main/resources/templates/trip.html
@@ -66,9 +66,9 @@
                             <div align="left" class="collapsible-body">
 
                                 <p th:text="${accommodation.notes}"></p>
-                                check-in: <span th:text="${#dates.format(accommodation.checkIn, 'MMM dd, yyyy')}" />&nbsp;
-                                <br>check-out: <span th:text="${#dates.format(accommodation.checkOut, 'MMM dd, yyyy')}" /><br>
-                                <h6><span th:if="${accommodation.price != null}" th:text="'$' + ${#numbers.formatDecimal(accommodation.price, 0, 'COMMA', 2, 'POINT')}">10.00</span></h6>
+                                Check-in: <span th:text="${#dates.format(accommodation.checkIn, 'MMM dd, yyyy')}" />&nbsp;
+                                <br>Check-out: <span th:text="${#dates.format(accommodation.checkOut, 'MMM dd, yyyy')}" /><br>
+                                <h6><span th:if="${accommodation.price != null}" th:text="'Price: $' + ${#numbers.formatDecimal(accommodation.price, 0, 'COMMA', 2, 'POINT')}">10.00</span></h6>
                                 
                                 
                                 <br>
@@ -125,8 +125,8 @@
                                 <p th:text="${reservation.notes}"></p>
                                 <h6 th:if="${!reservation.type.isEmpty()}" th:text="'Type: '+${reservation.type}"></h6>
                                 <span th:if="${!reservation.confirmation.isEmpty()}" th:text="'Confirmation: '+${reservation.confirmation}"></span>
-                               	<h6 th:text=" ${#dates.format(reservation.reserveTime, 'h:mm a')}"></h6>
-                                <h6 th:if="${reservation.price != null}" th:text="'$' +  ${#numbers.formatDecimal(reservation.price, 0, 'COMMA', 2, 'POINT')}"></h6>
+                               	<h6 th:text="'Time: ' + ${#dates.format(reservation.reserveTime, 'h:mm a')}"></h6>
+                                <h6 th:if="${reservation.price != null}" th:text="'Price: $' +  ${#numbers.formatDecimal(reservation.price, 0, 'COMMA', 2, 'POINT')}"></h6>
                                 <address th:if="${reservation.address != null}">
                                     <span th:text="${reservation.address.civicNumber}" />&nbsp;<span th:text="${reservation.address.street}" /><br>
                                     <span th:text="${reservation.address.city}"/>&nbsp;<span th:text="${reservation.address.province}" />&nbsp;<span th:text="${reservation.address.country}" /><br>
