--- a/src/main/resources/templates/add-reservation.html
+++ b/src/main/resources/templates/add-reservation.html
@@ -54,6 +54,7 @@
                         <div class="input-field col s4">
                             <select th:field="*{type}">
                                 <option value="" enabled selected>Choose your option</option>
+                                <option value="Flight">Plane</option>
                                 <option value="Train">Train</option>
                                 <option value="Ferry">Ferry</option>
                                 <option value="Bus">Bus</option>
